J'ai change le text

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 <body>
   <div class="container">
-    <h1 class="title">Hello</h1>
+    <h1 class="title">Hello world</h1>
   </div>
 </body>
 </html>
